# xserver-xorg-input-ft5x

./: Makefile.am  README.md  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile.am
